--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,71 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
+    "from tkinter import ttk\n",
     "import cv2\n",
     "from PIL import Image, ImageTk\n",
     "\n",
-    "# Initialize main Tkinter window\n",
-    "tk_window = tk.Tk()\n",
-    "tk_window.title(\"Object Tracking\")\n",
-    "tk_window.configure(bg=\"#101820\")  # Background color\n",
-    "tk_window.geometry(\"750x600\")\n",
+    "# Setup window\n",
+    "win = tk.Tk()\n",
+    "win.title(\"Object Tracking\")\n",
+    "win.configure(bg=\"#101820\")\n",
+    "win.geometry(\"750x600\")\n",
     "\n",
-    "# Dictionary of available tracker methods\n",
-    "tracker_types = {\n",
-    "    \"MIL\": cv2.TrackerMIL_create,\n",
-    "    \"KCF\": cv2.TrackerKCF_create,\n",
-    "    \"CSRT\": cv2.TrackerCSRT_create\n",
-    "}\n",
+    "# Tracker options\n",
+    "types = {\"MIL\": cv2.TrackerMIL_create, \"KCF\": cv2.TrackerKCF_create, \"CSRT\": cv2.TrackerCSRT_create}\n",
+    "tracker_type = tk.StringVar(value=\"CSRT\")\n",
     "\n",
-    "# Variable to hold the selected tracker type; default is \"CSRT\"\n",
-    "selected_tracker_type = tk.StringVar(value=\"CSRT\")\n",
-    "\n",
-    "# Initialize video capture and tracking variables\n",
+    "# Video capture\n",
     "cap = cv2.VideoCapture(0)\n",
-    "tracker = None\n",
-    "bbox = None\n",
-    "tracking = False\n",
+    "tracker, bbox, tracking = None, None, False\n",
     "\n",
-    "# Video Label\n",
-    "video_label = tk.Label(tk_window, bg=\"black\")\n",
-    "video_label.pack(fill=\"both\", expand=True, padx=10, pady=10)\n",
-    "\n",
-    "# Status Label\n",
-    "status_label = tk.Label(tk_window, text=\"Status: Idle\", font=(\"Arial\", 15, \"bold\"), fg=\"white\", bg=\"#101820\")\n",
-    "status_label.pack(pady=5)\n",
+    "# UI Elements\n",
+    "video_lbl = tk.Label(win, bg=\"black\")\n",
+    "video_lbl.pack(fill=\"both\", expand=True, padx=10, pady=10)\n",
+    "status_lbl = tk.Label(win, text=\"Idle\", font=(\"Arial\", 15, \"bold\"), fg=\"white\", bg=\"#101820\")\n",
+    "status_lbl.pack(pady=5)\n",
     "\n",
     "def select_roi():\n",
     "    global bbox, tracker, tracking\n",
     "    ret, frame = cap.read()\n",
     "    if ret:\n",
-    "        cv2.putText(frame, \"Select ROI then press 'ESC'\", (10, 30), \n",
-    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
+    "        cv2.putText(frame, \"Select ROI & press ESC\", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
     "        bbox = cv2.selectROI(\"Select ROI\", frame, fromCenter=False, showCrosshair=True)\n",
     "        cv2.destroyWindow(\"Select ROI\")\n",
     "        if bbox != (0, 0, 0, 0):\n",
-    "            tracker_function = tracker_types[selected_tracker_type.get()]\n",
-    "            tracker = tracker_function()\n",
+    "            tracker = types[tracker_type.get()]()\n",
     "            tracker.init(frame, bbox)\n",
     "            tracking = True\n",
-    "            status_label.config(text=\"Status: Tracking\", fg=\"lime\")\n",
-    "            \n",
+    "            status_lbl.config(text=\"Status: Tracking\", fg=\"lime\")\n",
     "\n",
-    "def start_tracking():\n",
+    "def start():\n",
     "    global tracking\n",
-    "    if tracker:\n",
-    "        tracking = True\n",
-    "        status_label.config(text=\"Status: Tracking\", fg=\"lime\")\n",
+    "    tracking = True\n",
+    "    status_lbl.config(text=\"Status: Tracking\", fg=\"lime\")\n",
     "\n",
-    "def stop_tracking():\n",
+    "def stop():\n",
     "    global tracking\n",
     "    tracking = False\n",
-    "    status_label.config(text=\"Status: Stopped\", fg=\"red\")\n",
-    "\n",
+    "    status_lbl.config(text=\"Status: Stopped\", fg=\"red\")\n",
     "\n",
     "def update():\n",
     "    ret, frame = cap.read()\n",
@@ -76,34 +62,29 @@
     "            if success:\n",
     "                x, y, w, h = map(int, new_bbox)\n",
     "                cv2.rectangle(frame, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
-    "                cv2.putText(frame, \"Tracking\", (x, y - 10),\n",
-    "                            cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
+    "                cv2.putText(frame, \"Tracking\", (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
     "            else:\n",
-    "                status_label.config(text=\"Status: Lost Tracking\", fg=\"orange\")\n",
+    "                status_lbl.config(text=\"Status: Lost Tracking\", fg=\"orange\")\n",
+    "        img = ImageTk.PhotoImage(Image.fromarray(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)))\n",
+    "        video_lbl.imgtk = img\n",
+    "        video_lbl.configure(image=img)\n",
+    "    win.after(15, update)\n",
     "\n",
-    "        # Convert frame to Tkinter format\n",
-    "        img = ImageTk.PhotoImage(image=Image.fromarray(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)))\n",
-    "        video_label.imgtk = img\n",
-    "        video_label.configure(image=img)\n",
-    "    tk_window.after(15, update)\n",
+    "# Controls\n",
+    "frame = tk.Frame(win, bg=\"#2C3E50\")\n",
+    "frame.pack(padx=10, pady=10)\n",
+    "tk.Label(frame, text=\"Select Tracker:\", font=(\"Arial\", 12, \"bold\"), fg=\"white\", bg=\"#2C3E50\").grid(row=0, column=0, padx=5, pady=5)\n",
+    "tt = ttk.Combobox(frame, textvariable=tracker_type, values=list(types.keys()), state=\"readonly\")\n",
+    "tt.grid(row=0, column=1, padx=5, pady=5)\n",
+    "tk.Button(frame, text=\"Select ROI\", width=12, command=select_roi, bg=\"#3498DB\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=2, padx=5, pady=5)\n",
+    "tk.Button(frame, text=\"Start Tracking\", width=12, command=start, bg=\"#2ECC71\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=3, padx=5, pady=5)\n",
+    "tk.Button(frame, text=\"Stop Tracking\", width=12, command=stop, bg=\"#E74C3C\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=4, padx=5, pady=5)\n",
     "\n",
-    "# Unified Grid Layout\n",
-    "control_frame = tk.Frame(tk_window, bg=\"#2C3E50\")\n",
-    "control_frame.pack(padx=10, pady=10)\n",
-    "\n",
-    "tk.Label(control_frame, text=\"Select Tracker:\", font=(\"Arial\", 12, \"bold\"), fg=\"white\", bg=\"#2C3E50\").grid(row=0, column=0, padx=5, pady=5)\n",
-    "tracker_menu = tk.ttk.Combobox(control_frame, textvariable=selected_tracker_type, values=list(tracker_types.keys()), state=\"readonly\")\n",
-    "tracker_menu.grid(row=0, column=1, padx=5, pady=5)\n",
-    "\n",
-    "tk.Button(control_frame, text=\"Select ROI\", width=15, command=select_roi, bg=\"#3498DB\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=2, padx=5, pady=5)\n",
-    "tk.Button(control_frame, text=\"Start Tracking\", width=15, command=start_tracking, bg=\"#2ECC71\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=3, padx=5, pady=5)\n",
-    "tk.Button(control_frame, text=\"Stop Tracking\", width=15, command=stop_tracking, bg=\"#E74C3C\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=4, padx=5, pady=5)\n",
-    "\n",
-    "# Start updating the video feed\n",
+    "# Main loop\n",
     "update()\n",
-    "tk_window.mainloop()\n",
+    "win.mainloop()\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
