try new methods

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try OpticalFlow & recovery"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +21,7 @@
     "\n",
     "# Setup window\n",
     "win = tk.Tk()\n",
-    "win.title(\"Enhanced Object Tracking\")\n",
+    "win.title(\"Object Tracking\")\n",
     "win.configure(bg=\"#101820\")\n",
     "win.geometry(\"1100x600\")\n",
     "\n",
@@ -278,6 +285,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try kalman filtering "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -462,6 +476,308 @@
     "win.mainloop()\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "try oop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from PIL import Image, ImageTk\n",
+    "\n",
+    "class ObjectTrackingApp:\n",
+    "    def __init__(self, root):\n",
+    "        # Initialize the main window\n",
+    "        self.root = root\n",
+    "        self.root.title(\"Enhanced Object Tracking\")\n",
+    "        self.root.configure(bg=\"#101820\")\n",
+    "        self.root.geometry(\"1100x600\")\n",
+    "        \n",
+    "        # Tracker options\n",
+    "        self.tracker_types = {\n",
+    "            \"MIL\": cv2.TrackerMIL_create, \n",
+    "            \"KCF\": cv2.TrackerKCF_create, \n",
+    "            \"CSRT\": cv2.TrackerCSRT_create\n",
+    "        }\n",
+    "        self.tracker_type = tk.StringVar(value=\"CSRT\")\n",
+    "        \n",
+    "        # Tracking enhancement options\n",
+    "        self.use_optical_flow = tk.BooleanVar(value=True)\n",
+    "        self.recovery_mode = tk.BooleanVar(value=True)\n",
+    "        \n",
+    "        # Tracking variables\n",
+    "        self.cap = cv2.VideoCapture(0)\n",
+    "        self.tracker = None\n",
+    "        self.bbox = None\n",
+    "        self.tracking = False\n",
+    "        self.prev_frame = None\n",
+    "        self.prev_pts = None\n",
+    "        self.tracking_history = []\n",
+    "        self.recovery_frames = 0\n",
+    "        self.max_recovery_frames = 30\n",
+    "        \n",
+    "        # Optical flow parameters\n",
+    "        self.feature_params = dict(maxCorners=100, qualityLevel=0.3, minDistance=7, blockSize=7)\n",
+    "        self.lk_params = dict(winSize=(15, 15), maxLevel=2, \n",
+    "                         criteria=(cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 0.03))\n",
+    "        \n",
+    "        # Create UI Elements\n",
+    "        self._create_ui()\n",
+    "        \n",
+    "    def _create_ui(self):\n",
+    "        # Video display label\n",
+    "        self.video_lbl = tk.Label(self.root, bg=\"black\")\n",
+    "        self.video_lbl.pack(fill=\"both\", expand=True, padx=10, pady=10)\n",
+    "        \n",
+    "        # Status label\n",
+    "        self.status_lbl = tk.Label(self.root, text=\"Idle\", font=(\"Arial\", 15, \"bold\"), fg=\"white\", bg=\"#101820\")\n",
+    "        self.status_lbl.pack(pady=5)\n",
+    "        \n",
+    "        # Controls frame\n",
+    "        frame = tk.Frame(self.root, bg=\"#2C3E50\")\n",
+    "        frame.pack(padx=10, pady=10)\n",
+    "        \n",
+    "        # Control elements\n",
+    "        tk.Label(frame, text=\"Select Tracker:\", font=(\"Arial\", 12, \"bold\"), fg=\"white\", bg=\"#2C3E50\").grid(row=0, column=0, padx=5, pady=5)\n",
+    "        ttk.Combobox(frame, textvariable=self.tracker_type, values=list(self.tracker_types.keys()), state=\"readonly\").grid(row=0, column=1, padx=5, pady=5)\n",
+    "        tk.Button(frame, text=\"Select ROI\", width=12, command=self.select_roi, bg=\"#3498DB\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=2, padx=5, pady=5)\n",
+    "        tk.Button(frame, text=\"Start Tracking\", width=12, command=self.start, bg=\"#2ECC71\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=3, padx=5, pady=5)\n",
+    "        tk.Button(frame, text=\"Stop Tracking\", width=12, command=self.stop, bg=\"#E74C3C\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=4, padx=5, pady=5)\n",
+    "        tk.Button(frame, text=\"Reset\", width=12, command=self.reset_tracker, bg=\"#F39C12\", fg=\"white\", font=(\"Arial\", 10, \"bold\")).grid(row=0, column=5, padx=5, pady=5)\n",
+    "        tk.Checkbutton(frame, text=\"Use Optical Flow\", variable=self.use_optical_flow, fg=\"white\", bg=\"#2C3E50\", selectcolor=\"#3498DB\", font=(\"Arial\", 10)).grid(row=0, column=6, padx=15, pady=5)\n",
+    "        tk.Checkbutton(frame, text=\"Auto Recovery Mode\", variable=self.recovery_mode, fg=\"white\", bg=\"#2C3E50\", selectcolor=\"#3498DB\", font=(\"Arial\", 10)).grid(row=0, column=7, padx=15, pady=5)\n",
+    "    \n",
+    "    def select_roi(self):\n",
+    "        ret, frame = self.cap.read()\n",
+    "        if ret:\n",
+    "            cv2.putText(frame, \"Select ROI & press ESC\", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (255, 255, 255), 2)\n",
+    "            self.bbox = cv2.selectROI(\"Select ROI\", frame, fromCenter=False, showCrosshair=True)\n",
+    "            cv2.destroyWindow(\"Select ROI\")\n",
+    "            if self.bbox != (0, 0, 0, 0):\n",
+    "                self.tracker = self.tracker_types[self.tracker_type.get()]()\n",
+    "                self.tracker.init(frame, self.bbox)\n",
+    "                self.tracking = True\n",
+    "                self.status_lbl.config(text=\"Status: Tracking\", fg=\"lime\")\n",
+    "                \n",
+    "                # Initialize optical flow\n",
+    "                self.prev_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "                x, y, w, h = map(int, self.bbox)\n",
+    "                roi = self.prev_frame[y:y+h, x:x+w]\n",
+    "                self.prev_pts = cv2.goodFeaturesToTrack(roi, mask=None, **self.feature_params)\n",
+    "                if self.prev_pts is not None:\n",
+    "                    self.prev_pts = self.prev_pts + np.array([x, y], dtype=np.float32)  # Adjust coordinates to global frame\n",
+    "                self.tracking_history.clear()\n",
+    "    \n",
+    "    def start(self):\n",
+    "        self.tracking = True\n",
+    "        self.status_lbl.config(text=\"Status: Tracking\", fg=\"lime\")\n",
+    "    \n",
+    "    def stop(self):\n",
+    "        self.tracking = False\n",
+    "        self.status_lbl.config(text=\"Status: Stopped\", fg=\"red\")\n",
+    "    \n",
+    "    def reset_tracker(self):\n",
+    "        self.tracking = False\n",
+    "        self.tracker = None\n",
+    "        self.bbox = None\n",
+    "        self.prev_frame = None\n",
+    "        self.prev_pts = None\n",
+    "        self.tracking_history.clear()\n",
+    "        self.recovery_frames = 0\n",
+    "        self.status_lbl.config(text=\"Status: Reset\", fg=\"orange\")\n",
+    "    \n",
+    "    def update_tracker_with_optical_flow(self, frame, gray_frame):\n",
+    "        if self.prev_frame is None or self.prev_pts is None or len(self.prev_pts) < 5:\n",
+    "            return False, self.bbox\n",
+    "        \n",
+    "        # Calculate optical flow\n",
+    "        next_pts, status, _ = cv2.calcOpticalFlowPyrLK(self.prev_frame, gray_frame, self.prev_pts, None, **self.lk_params)\n",
+    "        \n",
+    "        # Filter good points\n",
+    "        if next_pts is not None:\n",
+    "            good_new = next_pts[status == 1]\n",
+    "            good_old = self.prev_pts[status == 1]\n",
+    "            \n",
+    "            if len(good_new) > 5:  # Enough points to estimate movement\n",
+    "                # Calculate bounding box movement\n",
+    "                movement = np.mean(good_new - good_old, axis=0)\n",
+    "                x, y, w, h = self.bbox\n",
+    "                \n",
+    "                # Update bounding box position\n",
+    "                new_x = x + movement[0]\n",
+    "                new_y = y + movement[1]\n",
+    "                \n",
+    "                # Update previous points for next iteration\n",
+    "                self.prev_pts = good_new.reshape(-1, 1, 2)\n",
+    "                self.prev_frame = gray_frame.copy()\n",
+    "                \n",
+    "                # Update bbox\n",
+    "                new_bbox = (new_x, new_y, w, h)\n",
+    "                return True, new_bbox\n",
+    "        \n",
+    "        # Not enough points to track\n",
+    "        return False, self.bbox\n",
+    "    \n",
+    "    def attempt_recovery(self, frame, gray_frame):\n",
+    "        if len(self.tracking_history) < 5:\n",
+    "            return False, self.bbox\n",
+    "        \n",
+    "        # Predict position based on recent movement\n",
+    "        recent_positions = np.array(self.tracking_history[-5:])\n",
+    "        if len(recent_positions) >= 2:\n",
+    "            # Calculate average movement direction and speed\n",
+    "            movements = recent_positions[1:] - recent_positions[:-1]\n",
+    "            avg_movement = np.mean(movements, axis=0)\n",
+    "            \n",
+    "            # Predict new position\n",
+    "            last_pos = recent_positions[-1]\n",
+    "            predicted_pos = last_pos + avg_movement * (self.recovery_frames * 0.5 + 1)  # Scale movement by recovery time\n",
+    "            \n",
+    "            x, y, w, h = self.bbox\n",
+    "            new_bbox = (predicted_pos[0], predicted_pos[1], w, h)\n",
+    "            \n",
+    "            # Reinitialize tracker at predicted position\n",
+    "            self.tracker = self.tracker_types[self.tracker_type.get()]()\n",
+    "            self.tracker.init(frame, new_bbox)\n",
+    "            \n",
+    "            self.recovery_frames += 1\n",
+    "            return True, new_bbox\n",
+    "        \n",
+    "        return False, self.bbox\n",
+    "    \n",
+    "    def update(self):\n",
+    "        ret, frame = self.cap.read()\n",
+    "        if not ret:\n",
+    "            self.root.after(15, self.update)\n",
+    "            return\n",
+    "        \n",
+    "        gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        \n",
+    "        if self.tracking and self.tracker:\n",
+    "            tracking_success = False\n",
+    "            of_success = False\n",
+    "            \n",
+    "            # 1. Try CSRT tracker first\n",
+    "            if self.tracker:\n",
+    "                tracking_success, new_bbox = self.tracker.update(frame)\n",
+    "            \n",
+    "            # 2. Apply optical flow if enabled\n",
+    "            if self.use_optical_flow.get():\n",
+    "                of_success, of_bbox = self.update_tracker_with_optical_flow(frame, gray_frame)\n",
+    "                \n",
+    "                # Decide which result to use\n",
+    "                if tracking_success and of_success:\n",
+    "                    # Blend CSRT and optical flow results (weighted average)\n",
+    "                    csrt_weight = 0.7\n",
+    "                    of_weight = 0.3\n",
+    "                    x1, y1, w1, h1 = new_bbox\n",
+    "                    x2, y2, w2, h2 = of_bbox\n",
+    "                    \n",
+    "                    blended_x = x1 * csrt_weight + x2 * of_weight\n",
+    "                    blended_y = y1 * csrt_weight + y2 * of_weight\n",
+    "                    self.bbox = (blended_x, blended_y, w1, h1)  # Keep original width/height\n",
+    "                    \n",
+    "                    # Update optical flow points occasionally for long-term stability\n",
+    "                    if len(self.tracking_history) % 10 == 0:\n",
+    "                        x, y, w, h = map(int, self.bbox)\n",
+    "                        roi = gray_frame[max(0, y):min(frame.shape[0], y+h), \n",
+    "                                        max(0, x):min(frame.shape[1], x+w)]\n",
+    "                        if roi.size > 0:\n",
+    "                            pts = cv2.goodFeaturesToTrack(roi, mask=None, **self.feature_params)\n",
+    "                            if pts is not None and pts.size > 0:\n",
+    "                                self.prev_pts = pts + np.array([x, y], dtype=np.float32)\n",
+    "                                self.prev_frame = gray_frame.copy()\n",
+    "                elif tracking_success:\n",
+    "                    self.bbox = new_bbox\n",
+    "                elif of_success:\n",
+    "                    self.bbox = of_bbox\n",
+    "                    \n",
+    "            elif tracking_success:\n",
+    "                self.bbox = new_bbox\n",
+    "            \n",
+    "            # Store tracking history (for recovery)\n",
+    "            if tracking_success or of_success:\n",
+    "                x, y, w, h = map(float, self.bbox)\n",
+    "                center_x, center_y = x + w/2, y + h/2\n",
+    "                self.tracking_history.append((center_x, center_y))\n",
+    "                if len(self.tracking_history) > 30:  # Keep last 30 positions\n",
+    "                    self.tracking_history.pop(0)\n",
+    "                \n",
+    "                self.recovery_frames = 0\n",
+    "                self.status_lbl.config(text=\"Status: Tracking\", fg=\"lime\")\n",
+    "            \n",
+    "            # Attempt recovery if tracking lost\n",
+    "            elif self.recovery_mode.get() and self.recovery_frames < self.max_recovery_frames:\n",
+    "                recovery_success, recovery_bbox = self.attempt_recovery(frame, gray_frame)\n",
+    "                if recovery_success:\n",
+    "                    self.bbox = recovery_bbox\n",
+    "                    self.status_lbl.config(text=f\"Status: Recovering ({self.recovery_frames}/{self.max_recovery_frames})\", fg=\"orange\")\n",
+    "                else:\n",
+    "                    self.status_lbl.config(text=\"Status: Lost Tracking\", fg=\"red\")\n",
+    "            else:\n",
+    "                self.status_lbl.config(text=\"Status: Lost Tracking\", fg=\"red\")\n",
+    "                \n",
+    "            # Draw tracking information on frame\n",
+    "            if self.bbox is not None:\n",
+    "                x, y, w, h = map(int, self.bbox)\n",
+    "                cv2.rectangle(frame, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
+    "                \n",
+    "                if tracking_success:\n",
+    "                    label = \"Tracking (CSRT)\"\n",
+    "                elif of_success:\n",
+    "                    label = \"Tracking (OptFlow)\"\n",
+    "                elif self.recovery_frames > 0:\n",
+    "                    label = f\"Recovering ({self.recovery_frames})\"\n",
+    "                else:\n",
+    "                    label = \"Lost\"\n",
+    "                    \n",
+    "                cv2.putText(frame, label, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 0), 2)\n",
+    "                \n",
+    "                # Draw tracking history\n",
+    "                if len(self.tracking_history) > 1:\n",
+    "                    for i in range(1, len(self.tracking_history)):\n",
+    "                        pt1 = tuple(map(int, self.tracking_history[i-1]))\n",
+    "                        pt2 = tuple(map(int, self.tracking_history[i]))\n",
+    "                        cv2.line(frame, pt1, pt2, (0, 0, 255), 1)\n",
+    "        \n",
+    "        # Display frame\n",
+    "        img = ImageTk.PhotoImage(Image.fromarray(cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)))\n",
+    "        self.video_lbl.imgtk = img\n",
+    "        self.video_lbl.configure(image=img)\n",
+    "        \n",
+    "        self.root.after(33, self.update)\n",
+    "    \n",
+    "    def run(self):\n",
+    "        # Start the update loop and run the application\n",
+    "        self.update()\n",
+    "        self.root.mainloop()\n",
+    "    \n",
+    "    def cleanup(self):\n",
+    "        # Release resources\n",
+    "        self.cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
+    "\n",
+    "\n",
+    "# Entry point\n",
+    "if __name__ == \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    app = ObjectTrackingApp(root)\n",
+    "    try:\n",
+    "        app.run()\n",
+    "    finally:\n",
+    "        app.cleanup()"
    ]
   },
   {
