--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1,6 +1,84 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Main Logic:\n",
+    "# CSRT Tracker & Optical Flow & Kalman Filter  & Tracking History\n",
+    "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from collections import deque\n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "ret, frame = cap.read()\n",
+    "bbox = cv2.selectROI(\"Select Object\", frame, False)\n",
+    "\n",
+    "tracker = cv2.TrackerCSRT_create()\n",
+    "tracker.init(frame, bbox)\n",
+    "prev_gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "kalman = cv2.KalmanFilter(4, 2)\n",
+    "kalman.measurementMatrix = np.array([[1, 0, 0, 0],[0, 1, 0, 0]], np.float32)\n",
+    "kalman.transitionMatrix = np.array([[1, 0, 1, 0],[0, 1, 0, 1],[0, 0, 1, 0],[0, 0, 0, 1]], np.float32)\n",
+    "kalman.processNoiseCov = np.eye(4, dtype=np.float32) * 0.03\n",
+    "\n",
+    "tracking_history = deque(maxlen=10)\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "    success, bbox = tracker.update(frame)\n",
+    "\n",
+    "    if success:\n",
+    "        x, y, w, h = [int(v) for v in bbox]\n",
+    "        center_x, center_y = x + w // 2, y + h // 2\n",
+    "\n",
+    "        measurement = np.array([[np.float32(center_x)], [np.float32(center_y)]])\n",
+    "        kalman.correct(measurement)\n",
+    "\n",
+    "        tracking_history.append((center_x, center_y, w, h))\n",
+    "\n",
+    "    else:\n",
+    "        if len(tracking_history) > 1:\n",
+    "            p0 = np.array([[tracking_history[-2][:2]]], dtype=np.float32)\n",
+    "            p1, st, err = cv2.calcOpticalFlowPyrLK(prev_gray, gray, p0, None)\n",
+    "\n",
+    "            if p1 is not None and st[0] == 1:\n",
+    "                pred_x, pred_y = int(p1[0][0][0]), int(p1[0][0][1])\n",
+    "            else:\n",
+    "                prediction = kalman.predict()\n",
+    "                pred_x, pred_y = int(prediction[0]), int(prediction[1])\n",
+    "\n",
+    "            bbox = (pred_x - w // 2, pred_y - h // 2, w, h)\n",
+    "            tracker = cv2.TrackerCSRT_create()\n",
+    "            tracker.init(frame, bbox)\n",
+    "\n",
+    "    prev_gray = gray.copy()\n",
+    "\n",
+    "    if len(tracking_history) > 0:\n",
+    "        last_x, last_y, last_w, last_h = tracking_history[-1]\n",
+    "        cv2.rectangle(frame, (last_x - last_w // 2, last_y - last_h // 2), (last_x + last_w // 2, last_y + last_h // 2), (0, 255, 0), 2)\n",
+    "\n",
+    "    for i in range(1, len(tracking_history)):\n",
+    "        cv2.line(frame, tracking_history[i - 1][:2], tracking_history[i][:2], (0, 0, 255), 2)\n",
+    "\n",
+    "    cv2.imshow(\"Tracking\", frame)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == 27:\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
